--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -119,7 +119,35 @@ span.form-ops
 
 form.search
 {
+	margin: 0px;
 	white-space: nowrap;
+}
+
+span.twitter-typeahead
+{
+	display: inline !important;
+}
+
+p.tt-suggestion
+{
+	margin: 0px;
+}
+
+p.tt-suggestion a
+{
+	display: block;
+	width: 100%;
+	padding: 6px 4px;
+	width: 400px;
+	overflow: hidden;
+	background: rgba(224, 224, 224, 0.8);
+	color: black;
+	text-decoration: none;
+}
+
+p.tt-suggestion a:hover
+{
+	background: rgba(192, 192, 192, 0.8);
 }
 
 form#search
@@ -135,7 +163,7 @@ div#topbar
 	width: 100%;
 	height: 16px;
 	padding: 8px 0px;
-	background: rgba(200, 200, 200, 0.6);
+	background: rgba(192, 192, 192, 0.6);
 }
 
 div#toolbar
