--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,7 @@ body
 {
 	font-family: sans-serif;
 	font-size: 8pt;
+	height: 100%;
 }
 
 main.normal
@@ -168,7 +169,20 @@ p.tt-suggestion a:hover, p.tt-footer a:hover
 
 form#search
 {
+	height: 16px;
 	margin-top: -2px;
+}
+
+form.search
+{
+	height: 12pt;
+}
+
+form#search button, form.search button, form#search input, form.search input
+{
+	height: 100%;
+	border: 0px;
+	line-height: 100%;
 }
 
 div#topbar
@@ -213,10 +227,11 @@ a.toolbar-button img
 
 iframe#page
 {
-	top: 32;
+	top: 32px;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	border: none;
+	display: block;
 }
 
