--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,6 +42,7 @@ h1
 {
 	font-size: 14pt;
 	font-weight: bold;
+	margin-bottom: 20px;
 }
 
 input
@@ -49,12 +50,28 @@ input
 	border: none;
 }
 
+a.category-title
+{
+	display: block;
+	color: black;
+	font-weight: bold;
+	text-decoration: none;
+	font-size: 10pt;
+	background: #ccc;
+	border: 1px solid #aaa;
+	padding: 8px;
+	margin-top: 20px;
+}
+
 table
 {
 	width: 100%;
-	margin-top: 32px;
-	margin-bottom: 8px;
 	border-collapse: collapse;
+}
+
+div.category-container.loaded table
+{
+	margin-top: 20px;
 }
 
 table tr
