--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,12 +42,17 @@ h1
 {
 	font-size: 14pt;
 	font-weight: bold;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 }
 
 input
 {
 	border: none;
+}
+
+div.category-container
+{
+	margin-bottom: 20px;
 }
 
 a.category-title
@@ -60,7 +65,6 @@ a.category-title
 	background: #ccc;
 	border: 1px solid #aaa;
 	padding: 8px;
-	margin-top: 20px;
 }
 
 table
