--- a/accessories/wikistyle.css
+++ b/accessories/wikistyle.css
@@ -664,11 +664,11 @@ th.mergedtoprow {
 
 ul {
 	margin-bottom: 0px;
-	margin-left: 1.6em;
+	margin-left: 1em;
 	margin-right: 0px;
 }
 
-ul ul {
+.hlist ul {
 	display: inline;
 }
 
@@ -725,6 +725,7 @@ figure img {
 .hlist dd dd:first-child::before, .hlist dd dt:first-child::before, .hlist dd li:first-child::before, .hlist dt dd:first-child::before, .hlist dt dt:first-child::before, .hlist dt li:first-child::before, .hlist li dd:first-child::before, .hlist li dt:first-child::before, .hlist li li:first-child::before {
     content: " (";
     display: inline;
+    margin-right: -3pt;
     font-weight: 400;
 }
 
@@ -778,5 +779,338 @@ table.wikitable > tr > th, table.wikitable > tr > td, table.wikitable > * > tr >
 
 div.transborder {
     border: solid transparent;
+}
+
+code {
+    background-color: #f8f9fa;
+    border: 1px solid #eaecf0;
+    border-radius: 2px;
+    padding: 0px 2px;
+}
+
+pre {
+    background-color: #f8f9fa;
+    border: 1px solid #eaecf0;
+    padding: 0.5em 1em;
+    white-space: pre-wrap;
+}
+
+.mw-highlight .hll {
+    background-color:#ffffcc;
+}
+
+.mw-highlight {
+    background:#f8f8f8}.mw-highlight .c {
+    color:#408080;
+    font-style:italic;
+}
+
+.mw-highlight .err {
+    border:1px solid #FF0000;
+}
+
+.mw-highlight .k {
+    color:#008000;
+    font-weight:bold;
+}
+
+.mw-highlight .o {
+    color:#666666;
+}
+
+.mw-highlight .ch {
+    color:#408080;
+    font-style:italic;
+}
+
+.mw-highlight .cm {
+    color:#408080;
+    font-style:italic;
+}
+
+.mw-highlight .cp {
+    color:#BC7A00;
+}
+
+.mw-highlight .cpf {
+    color:#408080;
+    font-style:italic;
+}
+
+.mw-highlight .c1 {
+    color:#408080;
+    font-style:italic;
+}
+
+.mw-highlight .cs {
+    color:#408080;
+    font-style:italic;
+}
+
+.mw-highlight .gd {
+    color:#A00000;
+}
+
+.mw-highlight .ge {
+    font-style:italic;
+}
+
+.mw-highlight .gr {
+    color:#FF0000;
+}
+
+.mw-highlight .gh {
+    color:#000080;
+    font-weight:bold;
+}
+
+.mw-highlight .gi {
+    color:#00A000;
+}
+
+.mw-highlight .go {
+    color:#888888;
+}
+
+.mw-highlight .gp {
+    color:#000080;
+    font-weight:bold;
+}
+
+.mw-highlight .gs {
+    font-weight:bold;
+}
+
+.mw-highlight .gu {
+    color:#800080;
+    font-weight:bold;
+}
+
+.mw-highlight .gt {
+    color:#0044DD;
+}
+
+.mw-highlight .kc {
+    color:#008000;
+    font-weight:bold;
+}
+
+.mw-highlight .kd {
+    color:#008000;
+    font-weight:bold;
+}
+
+.mw-highlight .kn {
+    color:#008000;
+    font-weight:bold;
+}
+
+.mw-highlight .kp {
+    color:#008000;
+}
+
+.mw-highlight .kr {
+    color:#008000;
+    font-weight:bold;
+}
+
+.mw-highlight .kt {
+    color:#B00040;
+}
+
+.mw-highlight .m {
+    color:#666666;
+}
+
+.mw-highlight .s {
+    color:#BA2121;
+}
+
+.mw-highlight .na {
+    color:#7D9029;
+}
+
+.mw-highlight .nb {
+    color:#008000;
+}
+
+.mw-highlight .nc {
+    color:#0000FF;
+    font-weight:bold;
+}
+
+.mw-highlight .no {
+    color:#880000;
+}
+
+.mw-highlight .nd {
+    color:#AA22FF;
+}
+
+.mw-highlight .ni {
+    color:#999999;
+    font-weight:bold;
+}
+
+.mw-highlight .ne {
+    color:#D2413A;
+    font-weight:bold;
+}
+
+.mw-highlight .nf {
+    color:#0000FF;
+}
+
+.mw-highlight .nl {
+    color:#A0A000;
+}
+
+.mw-highlight .nn {
+    color:#0000FF;
+    font-weight:bold;
+}
+
+.mw-highlight .nt {
+    color:#008000;
+    font-weight:bold;
+}
+
+.mw-highlight .nv {
+    color:#19177C;
+}
+
+.mw-highlight .ow {
+    color:#AA22FF;
+    font-weight:bold;
+}
+
+.mw-highlight .w {
+    color:#bbbbbb;
+}
+
+.mw-highlight .mb {
+    color:#666666;
+}
+
+.mw-highlight .mf {
+    color:#666666;
+}
+
+.mw-highlight .mh {
+    color:#666666;
+}
+
+.mw-highlight .mi {
+    color:#666666;
+}
+
+.mw-highlight .mo {
+    color:#666666;
+}
+
+.mw-highlight .sb {
+    color:#BA2121;
+}
+
+.mw-highlight .sc {
+    color:#BA2121;
+}
+
+.mw-highlight .sd {
+    color:#BA2121;
+    font-style:italic;
+}
+
+.mw-highlight .s2 {
+    color:#BA2121;
+}
+
+.mw-highlight .se {
+    color:#BB6622;
+    font-weight:bold;
+}
+
+.mw-highlight .sh {
+    color:#BA2121;
+}
+
+.mw-highlight .si {
+    color:#BB6688;
+    font-weight:bold;
+}
+
+.mw-highlight .sx {
+    color:#008000;
+}
+
+.mw-highlight .sr {
+    color:#BB6688;
+}
+
+.mw-highlight .s1 {
+    color:#BA2121;
+}
+
+.mw-highlight .ss {
+    color:#19177C;
+}
+
+.mw-highlight .bp {
+    color:#008000;
+}
+
+.mw-highlight .vc {
+    color:#19177C;
+}
+
+.mw-highlight .vg {
+    color:#19177C;
+}
+
+.mw-highlight .vi {
+    color:#19177C;
+}
+
+.mw-highlight .il {
+    color:#666666;
+}
+
+.mw-highlight {
+    direction:ltr;
+    unicode-bidi:embed;
+}
+
+.mw-highlight pre {
+    -moz-tab-size:4;
+    -o-tab-size:4;
+    tab-size:4;
+}
+
+code code.mw-highlight {
+    background-color:transparent;
+    border:0;
+    padding:0;
+}
+
+.mw-highlight .err {
+    border:0;
+}
+
+.mw-highlight .hll {
+    display:block;
+}
+
+.mw-highlight .lineno {
+    -moz-user-select:none;
+    -webkit-user-select:none;
+    -ms-user-select:none;
+}
+
+.mw-highlight.mw-content-ltr .lineno {
+    float:left;
+}
+
+.mw-highlight.mw-content-rtl .lineno {
+    float:right;
 }
 
