--- a/accessories/wikistyle.css
+++ b/accessories/wikistyle.css
@@ -196,6 +196,20 @@
 	width: 100%;
 }
 
+.mbox-small {
+	clear: right;
+	float: right;
+	margin: 4px 0.5em;
+	box-sizing: border-box;
+	width: 240px;
+	font-size: 90%;
+	line-height: 1.25em;
+}
+
+.haudio img {
+	max-height: 40px;
+}
+
 .mergedbottomrow td {
 	border-bottom-color: rgb(170, 170, 170);
 	border-bottom-style: solid;
@@ -365,6 +379,10 @@
 .thumb, figure {
 	background-color: transparent;
 	width: auto;
+}
+
+table figure {
+	border: none;
 }
 
 .thumb {
