--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -249,21 +249,17 @@ form#search button, form.search button, form#search input, form.search input
 div#topbar
 {
 	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-	width: 100%;
-	max-width: 800px;
+	top: 8px;
+	right: 8px;
 }
 
 div#toolbar
 {
 	width: 100%;
 	height: 32px;
-	margin-top: -28px;
-	background: rgba(192, 192, 192, 0.6);
 	display: flex;
+	opacity: 0;
+	background: rgba(192, 192, 192, 0.6);
 	flex-flow: row nowrap;
 	justify-content: space-between;
 	align-items: center;
@@ -271,7 +267,7 @@ div#toolbar
 
 div#toolbar:hover
 {
-	margin-top: 0px;
+	opacity: 1;
 }
 
 div.toolbar-expand
