--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -188,49 +188,10 @@ form.search
 	white-space: nowrap;
 }
 
-span.twitter-typeahead
-{
-	display: inline !important;
-}
-
-div.tt-menu
-{
-	max-height: 400px;
-	overflow-x: hidden;
-	overflow-y: auto;
-}
-
-p.tt-suggestion, p.tt-footer
-{
-	margin: 0;
-}
-
-p.tt-suggestion a, p.tt-footer a
-{
-	display: block;
-	width: 100%;
-	padding: 6px 4px;
-	width: 400px;
-	overflow: hidden;
-	background: rgba(224, 224, 224, 0.8);
-	color: black;
-	text-decoration: none;
-}
-
-p.tt-footer a
-{
-	font-style: italic;
-	font-weight: bold;
-}
-
-p.tt-suggestion a:hover, p.tt-footer a:hover
-{
-	background: rgba(192, 192, 192, 0.8);
-}
-
 form#search
 {
 	height: 16px;
+	margin: 0px;
 	margin-top: -2px;
 }
 
@@ -245,69 +206,3 @@ form#search button, form.search button, form#search input, form.search input
 	border: 1px solid #aaa;
 	line-height: 100%;
 }
-
-div#topbar
-{
-	position: absolute;
-	top: 8px;
-	right: 8px;
-}
-
-div#toolbar
-{
-	width: 100%;
-	height: 32px;
-	display: flex;
-	opacity: 0.4;
-	background: rgba(192, 192, 192, 0.6);
-	flex-flow: row nowrap;
-	justify-content: space-between;
-	align-items: center;
-}
-
-div#toolbar:hover
-{
-	opacity: 1;
-}
-
-div.toolbar-expand
-{
-	flex: 1 1 auto;
-}
-
-div.toolbar-spacer
-{
-	width: 8px;
-}
-
-a.toolbar-button
-{
-	display: block;
-	height: 16px;
-	margin: 0px 12px;
-}
-
-a.close-button
-{
-	display: block;
-	width: 12px;
-	height: 12px;
-	padding: 0px 16px;
-}
-
-a.close-button img
-{
-	width: 100%;
-	height: 100%;
-}
-
-iframe#page
-{
-	top: 32px;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border: none;
-	display: block;
-}
-
