Added toolbar CSS scoping and mmap-optimized LZMA decompressor

--- a/resources/css/toolbar.css
+++ b/resources/css/toolbar.css
@@ -3,19 +3,13 @@ i.fa
 	color: black;
 }
 
-div#zsr-topbar
+div#zsr-toolbar
 {
 	position: fixed;
 	z-index: 10;
 	top: 8px;
 	right: 8px;
 	height: 32px;
-	border: none;
-}
-div#zsr-toolbar
-{
-	width: 100%;
-	height: 100%;
 	display: flex;
 	opacity: 0.4;
 	background: rgba(192, 192, 192, 0.6);
@@ -30,24 +24,24 @@ div#zsr-toolbar:hover
 	opacity: 1;
 }
 
-div.zsr-toolbar-expand
+div#zsr-toolbar div.zsr-toolbar-expand
 {
 	flex: 1 1 auto;
 }
 
-div.zsr-toolbar-spacer
+div#zsr-toolbar div.zsr-toolbar-spacer
 {
 	width: 8px;
 }
 
-a.zsr-toolbar-button
+div#zsr-toolbar a.zsr-toolbar-button
 {
 	display: block;
 	margin: 0px 12px;
 	margin-top: 2px;
 }
 
-a.zsr-close-button
+div#zsr-toolbar a.zsr-close-button
 {
 	display: block;
 	width: 16px;
@@ -55,26 +49,26 @@ a.zsr-close-button
 	padding: 0px 16px;
 }
 
-a.zsr-close-button img
+div#zsr-toolbar a.zsr-close-button img
 {
 	width: 100%;
 	height: 100%;
 }
 
-form#zsr-search
+div#zsr-toolbar form#zsr-search
 {
 	height: 16px;
 	margin: 0px;
 }
 
-form#zsr-search button, form#zsr-search input
+div#zsr-toolbar form#zsr-search button, form#zsr-search input
 {
 	height: 100%;
 	border: 1px solid #aaa;
 	line-height: 100%;
 }
 
-form#zsr-search button
+div#zsr-toolbar form#zsr-search button
 {
 	padding: 0px 6px;
 }
